--- a/SpamDetectorClient/about.html
+++ b/SpamDetectorClient/about.html
@@ -7,7 +7,13 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+  <h1>Group Members</h1>
 
+  <ul>
+    <li>Edison</li>
+    <li>Jack</li>
+    <li>Alex</li>
+  </ul>
 
 </body>
 </html>
