--- a/SpamDetectorClient/about.html
+++ b/SpamDetectorClient/about.html
@@ -5,15 +5,59 @@
   <title>Spam Detector - About</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+
+    .blue-column {
+      width: 200px;
+      height: 100vh;
+      background-color: blue;
+      float: left;
+    }
+    .yellow-column {
+      width: 200px;
+      height: 100vh;
+      background-color: yellow;
+      float: right;
+    }
+    .footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: orange;
+      height: 50px;
+      text-align: center;
+      color: white;
+      font-size: 20px;
+      line-height: 50px;
+    }
+
+    .main-content {
+      margin-left: 220px;
+      margin-right: 220px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Group Members</h1>
-
+  <header style="background-color: orange;">
+    <h1 style="margin: 0; padding: 20px; color: blue;">Group Members</h1>
+  </header>
+  <div class="blue-column">
+    <nav>
+      <ul>
+        <li><a class="active" href="index.html" style="color: white;">Dashboard</a></li>
+        <li><a href="about.html"style="color: white;">About</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="main-content">
   <ul>
-    <li>Edison</li>
+    <li>Edison Lei</li>
     <li>Jack</li>
     <li>Alex</li>
   </ul>
-
+  </div>
+  <div class="footer">
+    This is the footer.
+  </div>
 </body>
 </html>
