--- a/SpamDetectorClient/about.html
+++ b/SpamDetectorClient/about.html
@@ -51,9 +51,9 @@
   </div>
   <div class="main-content">
   <ul>
-    <li>Edison Lei</li>
-    <li>Jack</li>
-    <li>Alex</li>
+    <li>Edison Lei GitHub: eleiotu</li>
+    <li>Nirujan Velvarathan GitHub: nirujan-v</li>
+    
   </ul>
   </div>
   <div class="footer">
